# ckanext-nhm

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENCE  README.md  dev_requirements.txt  docker-compose.yml  gulpfile.js  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md  compileLess.yml
.github/workflows/: bump.yml  compileLess.yml  main.yml  sync.yml  tests.yml
ckanext/: __init__.py
ckanext/nhm/: cli.py  db.py  plugin.py  settings.py
ckanext/nhm/commands/: __init__.py  category.py  dataset_category.py  dataset_purge_all.py  dataset_type.py  datasets.yaml  datastore.py  file.py  initdb.py  keemu.py  keemu_datasets.ini  keemu_import.py  resource_index.py  stats.py  update_full_text.py  update_fulltext.py
ckanext/nhm/controllers/: __init__.py  about.py  dcat.py  dwc.py  indexlot.py  keemu_record.py  legal.py  map.py  metrics.py  object.py  page.py  record.py  specimen.py  specimen_citation.py  stats.py
ckanext/nhm/dcat/: __init__.py  processors.py  profiles.py  specimen_records.py  utils.py
ckanext/nhm/handlers/: __init__.py
ckanext/nhm/lib/: __init__.py  cache.py  db.py  db_load_balancing.py  dwc.py  eml.py  external_links.py  filter_options.py  form.py  helpers.py  jinja_extensions.py  keemu.py  mail.py  mam.py  record.py  resource.py  resource_filters.py  resource_view.py  taxonomy.py  utils.py
ckanext/nhm/logic/: __init__.py  action.py  schema.py  validators.py
ckanext/nhm/model/: __init__.py  keemu.py  stats.py
ckanext/nhm/patches/: 162-semicolon-filter-search-encoding.patch  1961-allow-sort-with-unqoted-fields.patch  1966-full-text-search-on-integer-fails.patch  1970-ensure-field-names-are-stripped.patch  2009-recline-unneeded-queries.patch  2028-recline-view-no-records.patch  46-datapusher-strip-column-names.patch  79-reclinegrid-make-grid-object-avaiable.patch  add-dataset-stage-width.patch  ckan-ckanext-datastore-citext.patch  ckan-datapusher-auto-create-grid-view.patch  ckan-no-statement-timeout.patch  ckan_fulltext_viewhelper.txt  ckan_memory_leak_1847.txt  ckan_templates_package_snippets_info.html.patch  ckanext-ga-report.ckanext.ga_report.download_analytics.py.patch  ckanext_reclinepreview_theme_public_vendor_recline_recline.js.patch  datastore-count-speed.patch  (+11 more)
docker/: Dockerfile  entrypoint.sh
docs/: index.md
docs/_scripts/: gen_api_pages.py
tests/: test_helpers.py  test_plugin.py
tests/unit/: test_action.py  test_external_links.py  test_helpers.py  test_plugin.py  test_utils.py
(+464 files in other folders)
